[package]
name = "playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blake2s_u32 = { workspace = true }
cs = { workspace = true }
fft = { workspace = true }
field = { workspace = true }
trace_holder = { workspace = true }
serde = { workspace = true }
transpose = "0.2"
prover = { workspace = true }
trace_and_split = { workspace = true }
rand = { workspace = true, default-features = false }
serial_test = "3"
execution_utils = { workspace = true }
worker = { workspace = true }
itertools = "0.14.0"
gpu_prover = { workspace = true }
rayon = "1.10.0"
risc_v_simulator = { workspace = true, features = ["delegation"] }
bitvec = "1.0.1"